--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "fptcorporation",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,10 @@
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "hbs": "^4.2.0",
-    "mongoose": "^6.0.13"
+    "mongoose": "^6.0.13",
+    "multer": "^1.4.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
