--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "hbs": "^4.2.0",
     "mongoose": "^6.0.13",
     "multer": "^1.4.3"
