--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express-session": "^1.17.2",
     "hbs": "^4.2.0",
     "mongoose": "^6.0.13",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "sharp": "^0.29.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
