--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "fptcorporation",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/app.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "express": "^4.17.1",
-    "express-session": "^1.17.2",
-    "hbs": "^4.2.0",
-    "mongoose": "^6.0.13",
-    "multer": "^1.4.3",
-    "sharp": "^0.29.3"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  }
+    "name": "fptcorporation",
+    "version": "1.0.0",
+    "description": "",
+    "main": "src/app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon src/app.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "express": "^4.17.1",
+        "express-session": "^1.17.2",
+        "hbs": "^4.2.0",
+        "mongoose": "^6.0.14",
+        "multer": "^1.4.3"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.15"
+    }
 }
