--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,12 @@ style.css
 drop-downMenu.html
 modal.html
 modal_style.css
+
+
+
+
+src/public/uploads/admins/sonvhgch789.png
+src/public/uploads/admins/sonvhgch12333.png
+src/public/uploads/updateProfile/sonvhgch12333.png
+src/public/uploads/trainees/ssonn1.png
+src/public/uploads/trainers/sonvhgc696969.png
