--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "src/app.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "app.js"
+        "start": "src/app.js"
     },
     "keywords": [],
     "author": "",
